--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,10 +10,12 @@ URL: https://github.com/mikejohnson51/climateR
 Depends:
     R(>= 3.3.0),
     AOI
-Imports:
+Imports: 
+    areal,
     magrittr,
     ncdf4,
-    raster
+    raster,
+    sf
 VignetteBuilder: knitr
 Remotes: mikejohnson51/AOI
 License: MIT + file LICENSE
