export param_meta

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(getLOCA)
 export(getMACA)
 export(getPRISM)
 export(getTerraClim)
+export(param_meta)
 import(AOI)
 importFrom(RNetCDF,open.nc)
 importFrom(RNetCDF,var.get.nc)
