Add getTopoWx and clean up functions and checks; fixes #9

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,16 @@
 export("%>%")
 export(getBCCA)
 export(getBCSDvic)
+export(getCABCM)
 export(getCHIRPS)
 export(getDaymet)
+export(getEDDI)
 export(getGridMET)
 export(getLOCA)
 export(getMACA)
 export(getPRISM)
 export(getTerraClim)
+export(getTopoWX)
 export(param_meta)
 import(AOI)
 importFrom(RNetCDF,open.nc)
