--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ importFrom(foreach,foreach)
 importFrom(httr,GET)
 importFrom(httr,write_disk)
 importFrom(magrittr,"%>%")
+importFrom(methods,is)
 importFrom(raster,brick)
 importFrom(raster,crop)
 importFrom(raster,crs)
