--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,14 @@
 Package: climateR
 Type: Package
 Title: climateR
-Description: A set of functions to subset climate data to an area of interest.
-Version: 0.0.3
+Description: A set of functions to subset climate data for an area of interest.
+Version: 0.0.4
 Authors@R: person("Mike", "Johnson", role = c("aut", "cre"), email = "jmj00@ucsb.edu")
 Maintainer: Mike Johnson <jmj00@ucsb.edu>
 BugReports: https://github.com/mikejohnson51/climateR/issues
 URL: https://github.com/mikejohnson51/climateR
 Depends:
-    R(>= 3.5.0),
-    AOI
+    R(>= 3.5.0)
 Imports: 
     doParallel,
     foreach,
@@ -24,5 +23,5 @@ Remotes: mikejohnson51/AOI
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.0
 Suggests: testthat, knitr
