- add fast reprojection methods - fix date index bug #26 - improve CRS handeling #25 - Restructure internal scoping #23 - ensured grids snap "out" - update readme

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export("%>%")
 export(extract_sites)
+export(fast.download)
+export(fast_reproject)
 export(getBCCA)
 export(getCABCM)
 export(getCHIRPS)
@@ -29,6 +31,9 @@ importFrom(raster,crs)
 importFrom(raster,extent)
 importFrom(raster,raster)
 importFrom(raster,stack)
+importFrom(raster,values)
+importFrom(raster,writeRaster)
+importFrom(sf,gdal_utils)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_as_sfc)
 importFrom(sf,st_bbox)
