--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(getLOCA)
 export(getMACA)
 export(getPRISM)
 export(getTerraClim)
+export(getTerraClimNormals)
 export(getTopoWX)
 importFrom(RNetCDF,open.nc)
 importFrom(RNetCDF,var.get.nc)
