addressing new s2 issues (hacky #38)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ importFrom(raster,stack)
 importFrom(raster,values)
 importFrom(raster,writeRaster)
 importFrom(sf,gdal_utils)
+importFrom(sf,sf_use_s2)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_as_sfc)
 importFrom(sf,st_bbox)
