--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,21 +7,20 @@ Authors@R: person("Mike", "Johnson", role = c("aut", "cre"), email = "jmj00@ucsb
 Maintainer: Mike Johnson <jmj00@ucsb.edu>
 BugReports: https://github.com/mikejohnson51/climateR/issues
 URL: https://github.com/mikejohnson51/climateR
-Depends:
+Depends: 
     R(>= 3.5.0)
 Imports: 
     doParallel,
     foreach,
     httr,
     magrittr,
-    RNetCDF,
+    methods,
+    parallel,
     raster,
-    sf,
-    methods
-VignetteBuilder: knitr
+    RNetCDF,
+    sf
 Remotes: mikejohnson51/AOI
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
-Suggests: testthat, knitr
