add tests, fix extract points logic, add codecov github action

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,8 +39,10 @@ importFrom(RNetCDF,var.get.nc)
 importFrom(RNetCDF,var.inq.nc)
 importFrom(dplyr,`%>%`)
 importFrom(dplyr,distinct)
+importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_all)
 importFrom(dplyr,select)
 importFrom(future.apply,future_lapply)
 importFrom(glue,glue)
