--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ importFrom(ncmeta,nc_var)
 importFrom(ncmeta,nc_vars)
 importFrom(terra,`crs<-`)
 importFrom(terra,`ext<-`)
+importFrom(terra,`time<-`)
 importFrom(terra,`units<-`)
 importFrom(terra,as.polygons)
 importFrom(terra,crop)
@@ -69,6 +70,7 @@ importFrom(terra,project)
 importFrom(terra,rast)
 importFrom(terra,relate)
 importFrom(terra,sprc)
+importFrom(terra,time)
 importFrom(terra,union)
 importFrom(terra,units)
 importFrom(terra,vect)
