export daymet, working to get codecov to work...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(dap_xyzv)
 export(extract_sites)
 export(getBCCA)
 export(getCHIRPS)
+export(getDaymet)
 export(getGLDAS)
 export(getGridMET)
 export(getLOCA)
