--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,6 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.1
 Suggests: 
-    AOI,
+    covr,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
