add FTP support (loca-hydrology) #65; remove double export of get_dap #46

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(getDaymet)
 export(getGLDAS)
 export(getGridMET)
 export(getLOCA)
+export(getLOCA_hydro)
 export(getLivneh)
 export(getLivneh_fluxes)
 export(getMACA)
@@ -27,8 +28,10 @@ export(get_data)
 export(go_get_dap_data)
 export(make_ext)
 export(make_vect)
+export(merge_across_time)
 export(parse_date)
 export(read_dap_file)
+export(read_ftp)
 export(var_to_terra)
 export(vrt_crop_get)
 importFrom(RNetCDF,att.get.nc)
@@ -39,12 +42,18 @@ importFrom(RNetCDF,utcal.nc)
 importFrom(RNetCDF,var.get.nc)
 importFrom(RNetCDF,var.inq.nc)
 importFrom(dplyr,`%>%`)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
+importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(dplyr,slice)
+importFrom(dplyr,ungroup)
 importFrom(future.apply,future_lapply)
 importFrom(glue,glue)
 importFrom(methods,formalArgs)
@@ -57,6 +66,7 @@ importFrom(terra,`crs<-`)
 importFrom(terra,`ext<-`)
 importFrom(terra,`time<-`)
 importFrom(terra,`units<-`)
+importFrom(terra,align)
 importFrom(terra,as.polygons)
 importFrom(terra,crop)
 importFrom(terra,crs)
@@ -75,5 +85,9 @@ importFrom(terra,time)
 importFrom(terra,union)
 importFrom(terra,units)
 importFrom(terra,vect)
+importFrom(terra,xmax)
+importFrom(terra,xmin)
+importFrom(terra,ymax)
+importFrom(terra,ymin)
 importFrom(utils,head)
 importFrom(utils,tail)
