add nc_dims export, correct URL call, update tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ importFrom(future.apply,future_lapply)
 importFrom(glue,glue)
 importFrom(methods,formalArgs)
 importFrom(ncmeta,nc_coord_var)
+importFrom(ncmeta,nc_dims)
 importFrom(ncmeta,nc_gm_to_prj)
 importFrom(ncmeta,nc_grid_mapping_atts)
 importFrom(ncmeta,nc_var)
