Add meta info files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(climater_filter)
 export(dap)
 export(dap_crop)
 export(dap_get)
+export(dap_meta)
 export(dap_summary)
 export(dap_to_local)
 export(dap_xyzv)
@@ -30,13 +31,16 @@ export(getTerraClimNormals)
 export(getVIC)
 export(get_data)
 export(go_get_dap_data)
+export(grid_meta)
 export(make_ext)
 export(make_vect)
 export(merge_across_time)
 export(parse_date)
 export(read_dap_file)
 export(read_ftp)
+export(time_meta)
 export(var_to_terra)
+export(variable_meta)
 export(vrt_crop_get)
 export(writeDodsrc)
 export(writeNetrc)
