add pkgdown, add ensemble logic #70

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,10 @@ Type: Package
 Title: climateR
 Description: A set of functions to subset climate data.
 Version: 0.3.1
-Authors@R: person("Mike", "Johnson", role = c("aut", "cre"), email = "mikecp11@gmail.com")
+Authors@R: c(person("Mike", "Johnson", 
+             role = c("aut", "cre"), 
+             email = "mikecp11@gmail.com"),
+             person("ESIP", role = "fnd"))
 Maintainer: Mike Johnson <mikecp11@gmail.com>
 BugReports: https://github.com/mikejohnson51/climateR/issues
 URL: https://github.com/mikejohnson51/climateR
@@ -27,7 +30,8 @@ Suggests:
     httr,
     AOI,
     covr,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    rmarkdown
 Remotes:
     mikejohnson51/AOI
 Config/testthat/edition: 3
