--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -4,5 +4,6 @@ pkgdown_sha: ~
 articles:
   00-geopiper: 00-geopiper.html
   01-intro: 01-intro.html
-last_built: 2023-07-11T18:53Z
+  02-catalogs: 02-catalogs.html
+last_built: 2023-07-14T05:05Z
 
