--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,6 +99,7 @@ importFrom(terra,plot)
 importFrom(terra,project)
 importFrom(terra,rast)
 importFrom(terra,relate)
+importFrom(terra,setGDALconfig)
 importFrom(terra,sprc)
 importFrom(terra,time)
 importFrom(terra,union)
