--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,12 @@ Package: climateR
 Type: Package
 Title: climateR
 Description: A set of functions to subset climate data.
-Version: 0.3.1.2
+Version: 0.3.1.3
 Authors@R: c(person("Mike", "Johnson", 
              role = c("aut", "cre"), 
              email = "mikecp11@gmail.com"),
+             person("Justin", "Singh",  role = "ctb"),
+             person("Angus", "Watters",  role = "ctb"), 
              person("ESIP", role = "fnd"),
              person("NOAA OWP", role = "fnd"))
 Maintainer: Mike Johnson <mikecp11@gmail.com>
