--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -4,15 +4,17 @@ template:
   bootswatch: litera
 authors:
    ESIP: 
-     html: "<img src='man/figures/esip-logo.png' height='36' alt='ESIP'/>"
+     html: "<img src='man/figures/esip-logo.png' width=72' alt='ESIP'/>"
      href: "https://www.esipfed.org"
    NOAA OWP: 
-     html: "<img src='man/figures/noaa-logo.png' height='36' alt='ESIP'/>"
+     html: "<img src='man/figures/noaa-logo.png' width=72 alt='ESIP'/>"
      href: "https://www.esipfed.org"
    footer:
-    roles: [cre]
+    roles: [cre,ctb]
    citation:
     roles: [cre]
+   sidebar:
+    roles: [cre,ctb, fnd]
 articles:
 - title: climateR
   desc: Data access in R
