move tests back to AOI

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,8 @@ Imports:
     terra,
     utils,
     methods,
-    stats
+    stats,
+    grDevices
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
