added climatepy introduction vignette rmarkdown and all the accompanying figures

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -24,6 +24,7 @@ articles:
 - title: climatePy
   desc: Data acces in Python
   contents: 
+  - 03-intro-climatepy
   
 - title: Data Catalogs
   contents:
