add climatePy vingette to site

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(merge_across_time)
 export(parse_date)
 export(read_dap_file)
 export(read_ftp)
+export(read_live_catalog)
 export(time_meta)
 export(var_to_terra)
 export(variable_meta)
@@ -58,6 +59,7 @@ importFrom(RNetCDF,open.nc)
 importFrom(RNetCDF,utcal.nc)
 importFrom(RNetCDF,var.get.nc)
 importFrom(RNetCDF,var.inq.nc)
+importFrom(arrow,read_parquet)
 importFrom(dplyr,`%>%`)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
