--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ URL: https://github.com/mikejohnson51/climateR
 Depends: 
     R(>= 3.5.0)
 Imports: 
+    arrow,
     dplyr,
     future.apply,
     glue,
