--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -4,6 +4,7 @@ pkgdown_sha: ~
 articles:
   01-intro: 01-intro.html
   02-catalogs: 02-catalogs.html
+  03-intro-climatepy: 03-intro-climatepy.html
   schema: schema.html
-last_built: 2023-07-25T21:08Z
+last_built: 2023-08-01T00:40Z
 
