--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,10 +1,11 @@
 pandoc: 3.1.1
-pkgdown: 2.0.6
+pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
   01-intro: 01-intro.html
   02-catalogs: 02-catalogs.html
   03-intro-climatepy: 03-intro-climatepy.html
+  examples: examples.html
   schema: schema.html
-last_built: 2023-09-29T19:38Z
+last_built: 2023-11-17T22:53Z
 
