fix point based intersections, and add new use cases

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -98,6 +98,7 @@ importFrom(terra,ext)
 importFrom(terra,extract)
 importFrom(terra,flip)
 importFrom(terra,intersect)
+importFrom(terra,is.related)
 importFrom(terra,merge)
 importFrom(terra,minmax)
 importFrom(terra,nlyr)
