--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(dap_xyzv)
 export(extract_sites)
 export(get3DEP)
 export(getBCCA)
+export(getCABCM)
 export(getCHIRPS)
 export(getDaymet)
 export(getDodsrcPath)
