--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: climateR
 Type: Package
 Title: climateR
 Description: Find, subset, and retrive geospatial data by AOI.
-Version: 0.3.5
+Version: 0.3.6
 Authors@R: c(person("Mike", "Johnson", 
              role = c("aut", "cre"), 
              email = "jjohnson@lynker.com"),
@@ -37,7 +37,9 @@ Suggests:
     covr,
     testthat (>= 3.0.0),
     rmarkdown,
-    knitr
+    knitr,
+    kableExtra,
+    distill
 Remotes:
     mikejohnson51/AOI
 Config/testthat/edition: 3
