--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,11 +5,11 @@ Description: Find, subset, and retrive geospatial data by AOI.
 Version: 0.3.6
 Authors@R: c(person("Mike", "Johnson", 
              role = c("aut", "cre"), 
-             email = "jjohnson@lynker.com"),
+             email = "mike.johnson@nooa.gov"),
              person("Justin", "Singh",  role = "ctb"),
              person("ESIP", role = "fnd"),
              person("NOAA OWP", role = "fnd"))
-Maintainer: Mike Johnson <jjohnson@lynker.com>
+Maintainer: Mike Johnson <mike.johnson@nooa.gov>
 BugReports: https://github.com/mikejohnson51/climateR/issues
 URL: https://github.com/mikejohnson51/climateR
 Depends: 
